apps/strapi/deployment.yaml
apiVersion: apps/v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: strapi
  labels:
    app: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: strapi
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: strapi
          image: node:18-alpine
          command: ["/bin/sh", "-c"]
          args: ["cd /srv/app && npm run start"]
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: strapi-data
              mountPath: /srv/app
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /admin
              port: 1337
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 25
          livenessProbe:
            httpGet:
              path: /admin
              port: 1337
            initialDelaySeconds: 240
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5

      volumes:
        - name: strapi-data
          persistentVolumeClaim:
            claimName: strapi-data
